--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </video>
 </div>
 
-<h1 style="color: cyan">><b><u>Lyrics</u></b></h1> 
+<h1 style="color: cyan"><b><u>Lyrics</u></b></h1> 
 <p style="color: cyan">
 It's been raining in Manila, hindi ka ba nilalamig?
 And it's been raining in Manila, hindi ka ba nilalamig?
